--- a/css/gym.css
+++ b/css/gym.css
@@ -38,3 +38,21 @@ strong {
     text-decoration: underline;
     text-shadow: 2px 2px 7px white;
 }
+
+p {
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+footer{
+	border: 1px solid black;
+	color: #837EB1;
+	background-color: #000;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+}
