--- a/css/gym.css
+++ b/css/gym.css
@@ -5,10 +5,17 @@ body {
 	font-size: 1.2em;
 	font-family: din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif;
 }
-nav {
-    display: block;
+.logo{
     position: center;
-    width: 100%;
+    height: 70px;
+    float: left;
+    margin-right: auto;
+    margin-left: auto;
+}
+nav {
+    display: table;
+    position: center;
+    width: 80%;
     height: 70px;
     font-size: x-large;
 	color: #080808;
@@ -21,7 +28,7 @@ a {
 	border-radius: 10px;
 }
 .header {
-    padding: 50px;
+    padding: 70px;
     text-align: center;
     background: #1D1D1D;
     color: white;
@@ -48,11 +55,23 @@ footer{
 	border: 1px solid black;
 	color: #837EB1;
 	background-color: #000;
+    
 }
-
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 /* Create two equal columns that floats next to each other */
 .column {
+  color: white;
   float: left;
-  width: 50%;
+  width: 20%;
   padding: 10px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
